crates/atlas-runtime/tests/corpus/pass/functions/basic_functions.atlas
fn add(x: number, y: number) -> number {
    return x + y;
}

fn greet(name: string) -> string {
    return "Hello, " + name + "!";
}

fn is_even(n: number) -> bool {
    return n % 2 == 0;
}

print(add(3, 4));
print(greet("World"));
print(is_even(4));
print(is_even(7));
