crates/atlas-runtime/tests/corpus/fail/type_errors/wrong_arg_type.atlas
fn add(x: number, y: number) -> number {
    return x + y;
}
let result: number = add("hello", 2);
